--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
     </div>
     <h2>Welcome!</h2>
     <p>I am TheUndercoverPerson! I am the creator of MN Games!<br> I love to code. Below check out how much I have mastered each coding language.<br> -HTML: 67%<br> -CSS  (Still Learning): 25%<br> -JavaScript  (Still Learning): 25%<br> -Lua  (Still Learning): 10%<br> -Python  (Still Learning): 10%<br> -C# (Will Start Learning): 0%<br> -R (Will Start Learning): 0%</p>
+    <h2>For more information about me please view the About Me page.</h2>
   </body>
 </html>
