--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
   <title>TheUndercoverPerson</title>
     <style>
       body {
-        background-color:	 #1a1a1a;
+        background-image: linear-gradient(blue, black);
         font-family: "Roboto", sans-serif;
         color: white;
       }
       .div {
         text-align: center;
-        background-color:#66ccff;
       }
       button {
         color: white;
@@ -30,7 +29,7 @@
       <button onclick=window.location.href="coding.html">Coding Information</button>
       </center>
     </nav>
-    <div style="background-color:#66ccff; margin-bottom: 50px; padding-bottom: 15px;">
+    <div style="background-image: linear-gradient(blue, mediumslateblue); margin-bottom: 50px; padding-bottom: 15px;">
       <h1>TheUndercoverPerson's Portfolio</h1>
       <p>Programmed and created by TheUndercoverPerson.</p>
     </div>
