--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <title>TheUndercoverPerson</title>
     <style>
       body {
-        background-image: linear-gradient(aquamarine, blue);
+        background-image: linear-gradient(aqua, blue);
         font-family: "Roboto", sans-serif;
         color: white;
       }
@@ -30,11 +30,12 @@
       </center>
     </nav>
     <div style="background-image: linear-gradient(blue, mediumslateblue); margin-bottom: 50px; padding-bottom: 15px;">
-      <h1>TheUndercoverPerson's Portfolio</h1>
+      <h1>About Me</h1>
       <p>Programmed and created by TheUndercoverPerson.</p>
     </div>
-    <h2>Welcome!</h2>
-    <p>I am TheUndercoverPerson! I am the creator of MN Games!<br> I love to code. Below check out how much I have mastered each coding language.<br> -HTML: 67%<br> -CSS  (Still Learning): 25%<br> -JavaScript  (Still Learning): 25%<br> -Lua  (Still Learning): 10%<br> -Python  (Still Learning): 10%<br> -C# (Will Start Learning): 0%<br> -R (Will Start Learning): 0%</p>
-    <h2>For more information about me please view the About Me page.</h2>
+    <h2>Basic Information</h2>
+    <p>I am TheUndercoverPerson! I am a 13 year old avid developer who has created a game website.<br>
+    I learned all of my coding skills by myself by taking courses. I am still learning to code in, a little in HTML, CSS, JS, Lua, C#, Python, and R.<br>
+    I will soon start to teach coding classes in the future.</p>
   </body>
 </html>
