--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,7 @@
   <body>
     <nav>
       <center>
+              <button onclick=window.location.href="/">Home</button>
       <button onclick=window.location.href="projects.html">Projects</button>
       <button onclick=window.location.href="aboutme.html">About Me</button>
       <button onclick=window.location.href="coding.html">Coding Information</button>
