--- a/projects.html
+++ b/projects.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html>
   <head>
   <title>TheUndercoverPerson</title>
     <style>
       body {
-        background-image: linear-gradient(black, white);
+        background-image: linear-gradient(blue, darkviolet);
         font-family: "Roboto", sans-serif;
         color: white;
       }
